build_output_11.log

> Configure project :fabric
Fabric Loom: 1.5.8

> Task :common:compileJava
> Task :common:processResources UP-TO-DATE
> Task :common:classes
> Task :common:jar
> Task :common:downloadMcpConfig
> Task :common:extractSrg UP-TO-DATE
> Task :common:createMcpToSrg UP-TO-DATE
> Task :common:reobfJar
> Task :common:jarJar SKIPPED
> Task :common:reobfJarJar SKIPPED
> Task :common:assemble
> Task :common:compileTestJava NO-SOURCE
> Task :common:processTestResources NO-SOURCE
> Task :common:testClasses UP-TO-DATE
> Task :common:test NO-SOURCE
> Task :common:check UP-TO-DATE
> Task :common:build

> Task :fabric:compileJava FAILED
/home/az/project/BusinessCraft/fabric/src/main/java/com/quackers29/businesscraft/fabric/FabricClientSetup.java:53: error: incompatible types: invalid method reference
            CommonClientSetup.registerRenderers(EntityRendererRegistry::register);
                                                ^
    method register in class EntityRendererRegistry cannot be applied to given types
      required: EntityType<? extends E>,EntityRendererProvider<E>
      found:    EntityType<?>,EntityRendererProvider<?>
      reason: inference variable E has incompatible bounds
        equality constraints: CAP#1
        lower bounds: CAP#2
  where E is a type-variable:
    E extends Entity declared in method <E>register(EntityType<? extends E>,EntityRendererProvider<E>)
  where CAP#1,CAP#2 are fresh type-variables:
    CAP#1 extends Entity from capture of ?
    CAP#2 extends Entity from capture of ?
/home/az/project/BusinessCraft/fabric/src/main/java/com/quackers29/businesscraft/fabric/FabricClientSetup.java:118: error: incompatible types: invalid method reference
            CommonClientSetup.registerScreens(MenuScreens::register);
                                              ^
    method register in class MenuScreens cannot be applied to given types
      required: MenuType<? extends M>,ScreenConstructor<M,U>
      found:    MenuType<?>,ScreenConstructor<?,?>
      reason: inference variable M has incompatible bounds
        equality constraints: CAP#1
        lower bounds: CAP#2
  where M,U are type-variables:
    M extends AbstractContainerMenu declared in method <M,U>register(MenuType<? extends M>,ScreenConstructor<M,U>)
    U extends Screen,MenuAccess<M> declared in method <M,U>register(MenuType<? extends M>,ScreenConstructor<M,U>)
  where CAP#1,CAP#2 are fresh type-variables:
    CAP#1 extends AbstractContainerMenu from capture of ?
    CAP#2 extends AbstractContainerMenu from capture of ?
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':fabric:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.8/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 3s
8 actionable tasks: 5 executed, 3 up-to-date
